# jsi-rn-test

./: .gitignore  App.tsx  README.md  package.json
android/app/: build.gradle
ios/MyApp.xcodeproj/: project.pbxproj
react-native-jsi-test/: CONTRIBUTING.md  package.json  react-native-jsi-test.podspec  tsconfig.json
react-native-jsi-test-view/: README.md  package.json  react-native-jsi-test-view.podspec  tsconfig.json
react-native-jsi-test-view/android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp
react-native-jsi-test-view/android/src/main/: AndroidManifest.xml
react-native-jsi-test-view/android/src/main/java/com/reactnativejsitestview/: CustomView.java  JsiTestModule.java  JsiTestPackage.java  JsiTestViewManager.java  JsiTestViewModule.java  JsiTestViewPackage.java  NativeProxy.java
react-native-jsi-test-view/cpp/: JSIObjectToRapidJsonConverter.h  Logging.h  react-native-jsi-test-view.cpp  react-native-jsi-test-view.h
react-native-jsi-test-view/example/: package.json
react-native-jsi-test-view/example/android/app/: build.gradle
react-native-jsi-test-view/example/ios/: File.swift
react-native-jsi-test-view/example/ios/JsiTestExample.xcodeproj/: project.pbxproj
react-native-jsi-test-view/example/src/: App.tsx
react-native-jsi-test-view/ios/: JsiTestView.h  JsiTestView.mm  JsiTestViewWithTag.h  JsiTestViewWithTag.m
react-native-jsi-test-view/ios/JsiTest.xcodeproj/: project.pbxproj
react-native-jsi-test-view/src/: index.tsx
react-native-jsi-test/android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp
react-native-jsi-test/android/src/main/: AndroidManifest.xml
react-native-jsi-test/android/src/main/java/com/reactnativejsitest/: JsiTestModule.java  JsiTestPackage.java  JsiTestPackageJSI.java  NativeProxy.java
react-native-jsi-test/cpp/: JSIObjectToRapidJsonConverter.h  react-native-jsi-test.cpp  react-native-jsi-test.h  thread-test.cpp  thread-test.hpp
react-native-jsi-test/example/: app.json
react-native-jsi-test/example/android/: settings.gradle
react-native-jsi-test/example/ios/: Podfile
react-native-jsi-test/ios/: JsiTest.h  JsiTest.mm
react-native-jsi-test/src/: index.tsx
(+11 files in other folders)
